Return empty Optional instead of null